# laoshi

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: package-release.yml  python-ci.yml
laoshi/: converter.py  deckmanager.py  flashcardgenerator.py  main.py  speaker.py  translator.py
tests/: test_converter.py  test_deckmanager.py  test_flashcardgenerator.py  test_main.py  test_speaker.py  test_translator.py
