[tool.poetry]
name = "laoshi"
version = "0.1.0"
description = ""
authors = ["Ruben Serradas <rubenserradas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencc = "^1.1.7"
pypinyin = "^0.50.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
