name = "laoshi"
version = "0.2.2"
description = "CLI application for learning Chinese."
authors = ["Ruben Serradas <ruben@serradas.org>"]
readme = "README.md"

[project]
authors = [
    {name = "Ruben Serradas", email = "ruben@serradas.org"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "pypinyin<1.0.0,>=0.50.0",
		"googletrans==4.0.2",
    "gtts<3.0.0,>=2.5.0",
    "genanki<1.0.0,>=0.13.1",
    "requests<3.0.0,>=2.31.0",
    "click<9.0.0,>=8.1.7",
    "starcc<1.0.0,>=0.0.5",
    "click-repl<1.0.0,>=0.3.0",
]
name = "laoshi"
version = "0.2.2"
description = ""
readme = "README.md"

[project.scripts]
laoshi = "laoshi.main:cli_group"

[dependency-groups]
dev = [
    "pylint<4.0.0,>=3.0.3",
    "black<24.0.0,>=23.12.0",
]
